# sfosapi

./: README.md  setup.cfg  setup.py
samples/: client_login_test.py
sfosapi/: client.py  request.py
tests/: test_api_factory.py
