[metadata]
name = sfosapi
version = 0.1
description = A python SDK to manages Sophos SFOS Firewalls.
long_description = file: README.md
long_description_content_type = text
url = https://github.com/alantoewsio/sfosapi
author = Steven Sultana
author_email = sultsteven@gmail.com
maintainer = Alan Toews
maintainer_email = alan@toews.io
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    defusedxml
    python-dotenv